@startuml
'https://plantuml.com/class-diagram

abstract class MotorDrive {
  -status
  -startTick
  -endTick
  #enforceLimits()
  #toStart()
  #toEnd()
  #startLimitListener()
}
interface ExMotor
interface Action {
  run()
}
set separator none
class MotorDrive.SetPower
class MotorDrive.ToPosition
class MotorDrive.Limits
class MotorDrive.StartLimitListener

interface LimitListener {
  onLimit()
}
class LimitDrive {
  -status
  #addListener()
}
class LimitDrive.WatchLimit

Action <|-- MotorDrive.SetPower
Action <|-- MotorDrive.ToPosition
Action <|-- MotorDrive.Limits
LimitListener <|-- MotorDrive.StartLimitListener
MotorDrive - ExMotor : uses >

Action <|-- LimitDrive.WatchLimit
LimitDrive - LimitListener : publishes to >
MotorDrive.StartLimitListener - LimitDrive : added to >

@enduml